--- a/style.css
+++ b/style.css
@@ -140,11 +140,14 @@ h1 {
     color: black; 
     letter-spacing: 1.5px;
 }
-
+body object{
+height: 1150px;
+}
 div section{
     float: right;
     width: 48%; 
     border: 1px solid black;  
+    background-color: rgba(222, 184, 135, 0.205);
     padding-bottom: 4%;
     margin-top:6%;
     margin-right: 0.7%;
@@ -178,6 +181,7 @@ margin-left: -23%;
 }
 footer{
     margin-top: 5%;
+    clear: both;
 }
 footer p{
     clear:both;
